<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.RegisterActivity">

    <TextView
        android:id="@+id/textViewRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/register_activity_title"
        android:textColor="@color/cobalt"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        android:ems="12"
        android:gravity="center"
        android:hint="@string/user_name"
        android:inputType="textPersonName|textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegisterTitle" />

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:ems="12"
        android:gravity="center"
        android:hint="@string/user_phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:ems="12"
        android:gravity="center"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhoneNumber" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:ems="12"
        android:gravity="center"
        android:hint="@string/user_pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <Button
        android:id="@+id/regSignupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:enabled="false"
        android:text="@string/register_new_user_button"
        android:textSize="16sp"
        app:backgroundTint="@color/fern"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/regCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:text="@string/cancel_button"
        android:textSize="16sp"
        app:backgroundTint="@color/scarlet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>